service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8-actions-service
  namespace: apps
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: k8-actions-port
    protocol: TCP
    port: 80
    targetPort: 80
