ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: app.ostepopp.site
    http:
      paths:
      - path: "/k8-actions(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: k8-actions-service
            port:
              number: 80
